--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/prism.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-jsx.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-c.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-objectivec.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-java.min.js" type="text/javascript"></script>
   <script src="./dist/bundle.js"></script>
 </body>
 
